--- a/cc_library/py-scc/src/scripts/hue_lights_config.json
+++ b/cc_library/py-scc/src/scripts/hue_lights_config.json
@@ -1,7 +1,7 @@
 {
   "id": "hue_lights",
   "description": "4 spotlights",
-  "host": "192.168.178.82",
+  "host": "localhost",
   "labels": [
     "lamp"
   ],
