--- a/.travis.yml
+++ b/.travis.yml
@@ -47,8 +47,7 @@ matrix:
       script:
         - cd ../..
         - golint -set_exit_status sciler/...
-        - go test -v sciler/...
+        - go test -v sciler/... -race -coverprofile=coverage.txt -covermode=atomic
         - go build sciler
-        - go test -race -coverprofile=coverage.txt -covermode=atomic
       after_success:
         - bash <(curl -s https://codecov.io/bash)
